style.css
* {
  margin: 0;
  font-family: 'Lato', sans-serif;
}

.d-none {
  display: none;
}

.d-flex {
  display: flex;
}

.f-column {
  flex-direction: column;
}

.d-center {
  justify-content: center;
  align-items: center;
}

nav {
  padding: 1.5rem;
}

.t-center {
  text-align: center;
}

#mobile-nav {
  position: fixed;
  transition: transform 1s ease-in-out;
  top: 0;
  right: 0;
  bottom: 0;
  height: 100vh;
  width: 60vw;
  background: #272a31;
  z-index: 5;
  padding: 2rem;
}

#mobile-menu-left {
  position: fixed;
  transition: transform 1s ease-in-out;
  left: 0;
  top: 0;
  bottom: 0;
  height: 100vh;
  width: 40vw;
  background: #d3d3d3 no-repeat fixed left 50% bottom;
  opacity: 1;
}

#mobile-nav li {
  list-style: none;
  margin: 1rem 0;
  font-size: 1.5rem;
}

#mobile-nav li a {
  color: #d3d3d3;
  text-decoration: none;
}

#mobile-menu-btn::before {
  background: red;
}

#mobile-menu-btn {
  z-index: 6;
  height: 50px;
  width: 50px;
  cursor: pointer;
  transition: all 1s ease-in-out;
}

#mobile-menu-burger {
  z-index: 6;
  width: 35px;
  height: 4px;
  border-radius: 5px;
  background: #272a31;
  transition: all 1s ease-in-out;
}

#mobile-menu-burger::after,
#mobile-menu-burger::before {
  content: '';
  position: absolute;
  width: 35px;
  height: 4px;
  background: #272a31;
  border-radius: 5px;
  transition: all 1s ease-in-out;
}

#mobile-menu-burger::after {
  transform: translateY(8px);
}

#mobile-menu-burger::before {
  transform: translateY(-8px);
}

#mobile-menu-btn.open #mobile-menu-burger {
  rotate: 180deg;
  background: transparent;
}

#mobile-menu-btn.open #mobile-menu-burger::before {
  transform: rotate(45deg);
}

#mobile-menu-btn.open #mobile-menu-burger::after {
  transform: rotate(-45deg);
}

.hide-menu {
  transform: translateX(250%);
}

.hide-menu2 {
  transform: translateX(-200%);
}

.show-menu {
  transform: translateX(0);
}

.show-menu2 {
  transform: translateX(0);
}

header {
  padding: 5rem 1rem 5rem 1rem;
  color: #ec5242;
  font-size: 1.5rem;
}

header::before {
  content: '';
  background: url('img/MobileHeaderBG.jpg') no-repeat;
  background-size: cover;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
  height: 98vh;
  opacity: 0.3;
}

hgroup h1 {
  background-image: url('img/MobileMenuBG.jpg');
  font-weight: 900;
  background-size: cover;
  background-clip: border-box;
  -webkit-background-clip: text;
  color: #ec5242;
  -webkit-text-fill-color: transparent;
}

header h5 {
  margin-top: 2.5rem;
  border: 2px #f9f9f9 solid;
  color: #272a31;
  padding: 1.3rem;
  font-weight: 300;
}

header h2 {
  color: #272a31;
  margin: 1.2rem 0 0.5rem 0;
  font-weight: 900;
}

header h3 {
  color: #272a31;
  font-size: 1.3rem;
  font-weight: 500;
}

#main-program {
  background-color: #272a31;
}

#main-program h2 {
  color: #f9f9f9;
  padding: 1.5rem 0 0.5rem 0;
  margin: 1.5rem 0 0.3rem 0;
  font-weight: 700;
}

.underline {
  margin: 0 auto;
  height: 1px;
  width: 40px;
  background-color: #ec5242;
}

#program-cards {
  margin-top: 1.6rem;
}

.card-program {
  padding: 2rem;
  margin: 0.3rem 1.5rem;
  position: relative;
}

.card-program::before {
  content: '';
  background: url("img/cardProgramBG.png") no-repeat;
  background-size: cover;
  opacity: 0.2;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: absolute;
}

#join-button {
  background-color: #ec5242;
  margin: 3rem auto;
  width: 60%;
  padding: 2rem;
  color: #f9f9f9;
  text-decoration: none;
  font-weight: 700;
}

.card-program i {
  flex: 1;
  color: #f9f9f9;
  flex-shrink: 1;
}

.card-program h4 {
  flex: 2;
  color: #ec5242;
  flex-shrink: 1;
}

.card-program p {
  flex: 3;
  color: #f9f9f9;
  flex-shrink: 4;
}

#featured-speakers h2 {
  margin: 2rem 0 0.5rem 0;
  font-weight: 700;
}

footer .underline {
  margin: 1rem auto;
}

#featured-speakers .underline {
  margin-bottom: 2.5rem;
}

.card-speaker {
  padding: 2rem;
  transition: transform 1s ease-in-out;
  position: relative;
}

.speaker-image {
  max-width: 150px;
  max-height: 150px;
  margin-right: 4rem;
}

.card-speaker::before {
  content: '';
  position: absolute;
  background: url('img/SpeakerBG4.jpg') no-repeat;
  top: 20px;
  left: 20px;
  right: 0;
  bottom: 0;
  background-size: 100px 80px;
  z-index: -1;
}

#featured-speakers {
  display: grid;
  justify-items: center;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
}

.speaker-resume {
  color: #ec5242;
  font-style: italic;
}

.speaker-line {
  width: 30px;
  height: 2px;
  background-color: #d3d3d3;
  margin: 0.5rem 0;
}

.speaker-description {
  color: #272a31;
}

.ts-1 {
  transition: transform 1s ease-in-out;
}

.ts-12 {
  transition: transform 1.2s ease-in-out;
}

.ts-14 {
  transition: transform 1.4s ease-in-out;
}

.ts-16 {
  transition: transform 1.6s ease-in-out;
}

#see-more {
  transform: translateY(-10%);
  transition: transform 1s ease-in-out;
  padding: 1.2rem;
  margin: 0 auto;
  width: 90%;
  background-color: white;
  border: 1px solid #d3d3d3;
  font-weight: 500;
  letter-spacing: 1.5px;
}

#see-more span {
  margin-left: 1rem;
  color: #ec5242;
  font-size: 1.2rem;
  font-weight: bolder;
}

footer {
  margin-top: 2rem;
  background: #272a31;
  padding: 2rem;
  transition: transform 1s ease-out;
}

#img-div {
  flex-wrap: wrap;
}

#img-div > * {
  max-width: 150px;
  min-width: 150px;
  background: #272a31;
  flex-basis: 50%;
  margin: 1.5rem;
}

#img-div img:nth-child(7) {
  margin: 0 auto;
}

.p-fixed {
  position: fixed;
}

